--- a/listings/templates/signup.html
+++ b/listings/templates/signup.html
@@ -1,4 +1,4 @@
-{% extends "listings/base.html" %}
+{% extends "base.html" %}
 {% block content %}
   <div class="container mt-5">
     <h2>Sign up for FindNest</h2>
