--- a/listings/templates/base.html
+++ b/listings/templates/base.html
@@ -13,9 +13,9 @@
         <ul class="navbar-nav ms-auto">
           {% if user.is_authenticated %}
             <li class="nav-item"><a class="nav-link" href="{% url 'add_property' %}">Post Property</a></li>
-            <li class="nav-item"><a class="nav-link" href="/accounts/logout/">Logout</a></li>
+            <li class="nav-item"><a class="nav-link" href="/logout/">Logout</a></li>
           {% else %}
-            <li class="nav-item"><a class="nav-link" href="/accounts/login/">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="/login/">Login</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Sign Up</a></li>
           {% endif %}
         </ul>
