--- a/listings/templates/base.html
+++ b/listings/templates/base.html
@@ -15,7 +15,7 @@
             <li class="nav-item"><a class="nav-link" href="{% url 'add_property' %}">Post Property</a></li>
             <li class="nav-item"><a class="nav-link" href="/logout/">Logout</a></li>
           {% else %}
-            <li class="nav-item"><a class="nav-link" href="/login/">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="{%url 'login'%}">Login</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Sign Up</a></li>
           {% endif %}
         </ul>
