--- a/listings/templates/base.html
+++ b/listings/templates/base.html
@@ -12,11 +12,18 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           {% if user.is_authenticated %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'add_property' %}">Post Property</a></li>
-            <li class="nav-item"><a class="nav-link" href="/logout/">Logout</a></li>
-          {% else %}
-            <li class="nav-item"><a class="nav-link" href="{%url 'login'%}">Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Sign Up</a></li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+  </li>
+{% else %}
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'login' %}">Login</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
+  </li>
+{% endif %}
+
           {% endif %}
         </ul>
       </div>
